--- a/react-portfolio-website/src/component/contact/contact.css
+++ b/react-portfolio-website/src/component/contact/contact.css
@@ -59,13 +59,18 @@ input,textarea{
 /* ============== MEDIA QUERIES ( MEDIUM DEVICES ) ============== */
 
 @media screen and(max-width: 1024px) {
-    
+    .container.contact__container{
+        grid-template-columns: 1fr;
+        gap: 2rem;
+    }
     
   }
   
   /* ============== MEDIA QUERIES ( SMAL DEVICES ) ============== */
   
   @media screen and(max-width: 600px) {
-   
+    .container.contact__container{
+        width: var(--container-width-sm);
+    }
     
   }
