--- a/react-portfolio-website/src/component/portfolio/portfolio.css
+++ b/react-portfolio-website/src/component/portfolio/portfolio.css
@@ -25,12 +25,16 @@
 
 .portfolio__item h3{
     margin: 1.2rem 0 2rem;
+    text-align: center;
+
 }
+
 
 .portfolio__item-cta{
     display: flex;
     gap: 1rem;
     margin-bottom:1rem ;
+    justify-content: center;
 }
 
 /* ============== MEDIA QUERIES ( MEDIUM DEVICES ) ============== */
